# amo_crm

./: .env.example  .env.local.example  .env.production.example  .gitignore  AGENT_RULES.md  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
admin-panel/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
app/: main.py
bot/: client.py  main.py
deploy/: amo-crm-api-freeswitch.service.example  freeswitch_host.env.example
docs/: TELEPHONY_ARCHITECTURE.md  admin_panel.md  agent_profile.md  browser_audio_debug.md  browser_call_sandbox.md  direct_mode.md  engineering_readiness_audit.md  env_reference.md  first_call_runbook.md  first_live_call_runbook.md  freeswitch_control_integration.md  freeswitch_integration_plan.md  freeswitch_media_bridge.md  github_push_checklist.md  go_live_checklist.md  knowledge_base.md  local_runbook.md  local_setup.md  mango_connectivity_report.md  mango_control_plane.md  mango_freeswitch_call_flow.md  mango_live_audit.md  mango_live_inventory_sample.json  mango_live_smoke.md  mango_media_gateway.md  mango_parser_notes.md  mango_transfer_flow.md  manual_secrets_checklist.md  production_hardening_report.md  production_readiness.md  providers_settings.md  real_audio_loop.md  render_deploy.md  render_env_checklist.md  session_architecture.md  telephony_platform_architecture.md  troubleshooting.md  tts_providers.md  voice_strategy.md
migrations/: env.py
scripts/: bootstrap_local.sh  deploy_freeswitch_host_backend.sh  deploy_vps.sh  local_env_doctor.py  (+8 more)
(+256 files in other folders)
