[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amo-crm-voice"
version = "0.1.0"
description = "MVP AI Voice Sales System"
requires-python = ">=3.9"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Cache / Queue
    "redis[asyncio]>=5.0.0",
    "celery[redis]>=5.4.0",

    # Telegram bot
    "aiogram>=3.7.0",

    # Config
    "pydantic-settings>=2.3.0",
    "pydantic>=2.7.0",

    # Structured logging
    "structlog>=24.1.0",

    # Phone normalization
    "phonenumbers>=8.13.0",

    # HTTP client (bot → backend)
    "httpx>=0.27.0",

    # Secret encryption for provider settings
    "cryptography>=42.0.0",

    # Metrics export
    "prometheus-client>=0.20.0",

    # WebSocket client (Direct mode → Gemini Live API)
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app", "bot"]
